# zkillBot

./: .gitignore  README.md  manage.py  requirements.txt  setup.cfg
djzkbBot/: .env.blank  apps.py  asgi.py  context_processors.py  requirements.txt  settings.py  urls.py  wsgi.py
djzkbBot/authentication/: apps.py  backends.py  models.py  signals.py  urls.py  views.py
djzkbBot/authentication/discord_auth/: apps.py  decorators.py  errors.py  managers.py  models.py  urls.py  views.py
djzkbBot/authentication/discord_auth/migrations/: 0001_initial.py  0002_scope_alter_token_options.py  0003_token_scopes.py  0004_alter_token_ttl.py  0005_token_discord_user_id.py  0006_discordcallbackredirect.py
djzkbBot/authentication/migrations/: 0001_initial.py  0002_userprofile_discord_user_id.py  0003_userprofile_discord_avatar_hash.py
djzkbBot/authentication/templates/authentication/: auth_base.html  login.html
djzkbBot/bot/: apps.py  urls.py  views.py
djzkbBot/bot/discord_bot/: bot.py
djzkbBot/bot/templates/bot/: admin.html  bot_base.html  css_test.html  dashboard.html  sidebar.html
djzkbBot/management/commands/: showurls.py
djzkbBot/project_template/: launcher.py  manage.py  supervisor.conf
djzkbBot/project_template/project_name/: celery.py  urls.py  wsgi.py
djzkbBot/project_template/project_name/settings/: base.py  local.py
djzkbBot/public/: apps.py  urls.py  views.py
djzkbBot/public/templates/public/: home.html
djzkbBot/static/djzkbBot/css/: quartz_dark.css
djzkbBot/static/djzkbBot/css/bootstrap/css/: bootstrap-grid.css  bootstrap.css
djzkbBot/static/djzkbBot/scss/: _bootswatch.scss  _variables.scss  quartz_dark.scss
djzkbBot/templates/bundles/: bootstrap-css.html  bootstrap-js.html  bootswatch-css.html  icons.html
djzkbBot/templates/djzkbBot/: site-base.html
