[metadata]
name = zkillBot
version = attr: djzkbBot.__version__
description = A discord bot for zkillboard.
long_description = file: README.md
long_description_content_type = text/markdown
author = Col Crunch
author_email = colcrunch@eve-o.tech
license = GPL-2.0
license_file = LICENSE
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content
home_page = https://github.com/colcrunch/zkillBot/
keywords =
    zkillBot
    zkillboard
    discord
    eveonline
project_urls =
    Issue / Bug Reports = https://github.com/colcrunch/zkillBot/issues
    Documentation = https://github.com/colcrunch/zkillBot/

[options]
packages = find_namespace:
install_requires =
    bcrypt
    celery>=5.2.0,<6.0.0
    celery-once>=3.0.1
    django>=4.0.6,<4.1.0
    django-bootstrap-form
    django-celery-beat>=2.3.0
    django-esi>=4.0.1
    django-redis>=5.2.0,<6.0.0
    django-registration>=3.3
    discord.py>=2.1.0
    django-sortedm2m
    django-sass-compiler
    dnspython
    mysqlclient>=2.1.0
    openfire-restapi
    packaging>=21.0,<22
    passlib
    python-slugify>=1.2
    redis>=4.0.0,<5.0.0
    requests>=2.9.1,<3.0.0
    requests-oauthlib
    semantic-version
python_requires = ~=3.10
include_package_data = True
zip_safe = False

[options.packages.find]
include = djzkbBot*

[options.entry_points]
console_scripts =
    zkillbot = djzkbBot.bin.zkillbot:main

[options.extras_require]
test =
    coverage>=4.3.1
    django-webtest
    requests-mock>=1.2.0

[options.package_data]
* = *
